--- a/report.yml
+++ b/report.yml
@@ -1,13 +1,13 @@
-name: John Doe
+dirname: John Doe
 age: 30
 city: New York
 is_student: true
 grade:
   - subject: Math
-    grade: F
+    grade: G
   - subject: English
-    grade: F
+    grade: G
   - subject: Science
-    grade: F+
+    grade: G+
     subject: Computer
-    grade: F+
+    grade: G+
