--- a/report.yml
+++ b/report.yml
@@ -4,10 +4,10 @@ city: New York
 is_student: true
 grade:
   - subject: Math
-    grade: G
+    grade: H
   - subject: English
-    grade: G
+    grade: H
   - subject: Science
-    grade: G+
+    grade: H+
     subject: Computer
-    grade: G+
+    grade: H+
